change background color

--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
   <title>octavia leona kohner</title>
   <meta charset="UTF-8">
   <!-- <link rel="shortcut icon" href="files/favicon.png"/> -->
-  <style> body {padding: 0; margin: 0;} </style>
+  <style>
+    body {
+      padding: 0;
+      margin: 0;
+      background-color: black;
+    }
+</style>
 </head>
 
 <body>
