--- a/index.html
+++ b/index.html
@@ -6,13 +6,25 @@
   <!-- <link rel="shortcut icon" href="files/favicon.png"/> -->
   <style>
     body {
+      width: 100vw;
+      height: 100vh;
       padding: 0;
       margin: 0;
       background-color: black;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    p {
+      text-align: center;
+      color: white;
+      font-family: Gotham;
+      letter-spacing: 10px;
     }
 </style>
 </head>
 
 <body>
+<p>octavia leona kohner</p>
 </body>
 </html>
