--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <meta charset="UTF-8">
   <!-- <link rel="shortcut icon" href="files/favicon.png"/> -->
   <style>
+    @font-face {
+      font-family: myFont;
+      src: url('../fonts/myFont.otf') format("opentype");
+    }
     body {
       width: 100vw;
       height: 100vh;
