--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <style>
     @font-face {
       font-family: myFont;
-      src: url('../fonts/myFont.otf') format("opentype");
+      src: url('fonts/myFont.otf') format("opentype");
     }
     body {
       width: 100vw;
