--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     p {
       text-align: center;
       color: white;
-      font-family: Gotham;
+      font-family: myFont;
       letter-spacing: 10px;
     }
 </style>
